# chrome-dino-yolo-rl

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_CN.md  config.json  controller.py  play_game.py  play_rl.py  play_rule_based.py  pyproject.toml  requirements.txt  test_model.py  train_rl.py  train_yolo.py
.trae/documents/: ppo-rl-refactor-plan.md  refactor-to-ultralytics.md
cfg/: yolo26n_simple.yaml
runs/detect/dino_260417/: args.yaml  results.csv
src/: __init__.py
src/core/: __init__.py  detector.py  keyboard.py  screen.py  take_screenshots.py
src/rl/: __init__.py  callbacks.py  env.py  play.py  train.py
src/rule_based/: __init__.py  controller.py  play.py
src/utils/: __init__.py  visualization.py
src/yolo/: train_yolo26n.py  train_yolo26n_simple.py
