[project]
name = "chrome-dino-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "inference-gpu>=0.26.1",
    "mss>=10.1.0",
    "numpy>=1.26.4",
    "opencv-python>=4.10.0.84",
    "pynput>=1.8.1",
    "python-dotenv>=1.2.2",
    "supervision>=0.22.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
