[project]
name = "chrome-dino-yolo-rl"
version = "1.0.0"
description = "Chrome Dino Game bot using YOLO26 and Reinforcement Learning (PPO)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mss>=10.1.0",
    "numpy>=1.26.4",
    "opencv-contrib-python>=4.10.0.84",
    "supervision>=0.22.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "ultralytics>=8.4.38",
    "stable-baselines3>=2.0.0",
    "gymnasium>=0.29.0",
    "keyboard>=0.13.5",
    "tensorboard>=2.20.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
